# gogoo-panel-zones

./: CMakeLists.txt  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: CMakeLists.txt  Makefile.in  gogoo-panel-zones.desktop.in
data/style/: Makefile.in
data/theme/: CMakeLists.txt
po/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.in  com.meego.UX.Shell.Panels.zones.service.in  main.c  sw-zone.c
