CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
CMAKE_POLICY(VERSION 2.6)
SET(CMAKE_BUILD_TYPE Debug)
PROJECT(gogoo-panel-zones)
SET(PKG_VERSION 0.2.0)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake/Modules)
INCLUDE( ${CMAKE_SOURCE_DIR}/CMake/Modules/TargetDistclean.cmake)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})

FIND_PACKAGE(PkgConfig)

PKG_CHECK_MODULES(MX mx-1.0 REQUIRED)
PKG_CHECK_MODULES(MPL meego-panel REQUIRED)
PKG_CHECK_MODULES(WNCK libwnck-3.0 REQUIRED)
PKG_CHECK_MODULES(CLUTTER_GTK clutter-gtk-1.0 REQUIRED)
PKG_CHECK_MODULES(GCONF gconf-2.0 REQUIRED)


FIND_PACKAGE(Gettext)

SET(PKG_DATADIR ${CMAKE_INSTALL_PREFIX}/share)
SET(LOCALEDIR ${CMAKE_INSTALL_PREFIX}/share/locale)
SET(PKG_BINDIR ${CMAKE_INSTALL_PREFIX}/bin)
SET(PKG_LIBDIR ${CMAKE_INSTALL_PREFIX}/lib)
SET(PKG_LIBEXECDIR ${CMAKE_INSTALL_PREFIX}/libexec)
SET(DATA_DIR ${CMAKE_INSTALL_PREFIX}/share)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(po)
ADD_SUBDIRECTORY(data)

IF (ENABLE_DOC)
    ADD_SUBDIRECTORY(doc)
ENDIF()

########### Add uninstall target ###############
CONFIGURE_FILE(
  "${CMAKE_CURRENT_SOURCE_DIR}/CMake/cmake_uninstall.cmake.in"
  "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
  IMMEDIATE @ONLY)
ADD_CUSTOM_TARGET(uninstall
  "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake") 

