SET(THEME_SRCS
	background-gradient.png 
	app-background-panel.png 
	app-background-panel-highlight.png 
	content-panel-background.png 
	content-panel-background-highlight-orange.png 
	content-panel-header-grey.png 
	content-panel-header-orange.png 
	switcher.css 
	workspace-title-new-symbol-active.png 
	close-button.png 
	close-button-hover.png
    )

INSTALL(FILES ${THEME_SRCS} DESTINATION ${PKG_DATADIR}/gogoo-panel-zones/theme)



